Created attachment 128264 [details] first integral is not stretchy, second integral is strechy StarMath has the new command intd to generate a stretchy integral character ∫. The export to MathML was already fixed in bug 97049. But the import is wrong. It generates the normal "int" command although the integral operator should be the stretchy version "intd".
Confirmed in the master. Best regards. JBF
Takeshi Abe committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=f533b3f39956fe8028c1f7f7cc3c37b0feed8b57 tdf#103500 Import stretchy integral symbol from MathML It will be available in 5.3.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?
Yes it is fixed in Version: 5.4.0.0.alpha0+ Build ID: 5adab0927483d039037b0f93894627e41a2c72f2 CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; TinderBox: Win-x86@42, Branch:master, Time: 2017-01-09_23:34:00 Locale: de-DE (de_DE); Calc: group