tdf#103500 Import stretchy integral symbol from MathML

as "intd".

Change-Id: Ic8a4feef7a3a19c8ed5bca2f09f80901e2b6d343